--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.7.0",
+    "eslint-visitor-keys": "^3.3.0",
     "mqtt": "^4.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
